# backend/docs/swagger.yaml
@@ -52,6 +52,9 @@ definitions:
         items:
           $ref: '#/definitions/restapi.NoteSimpleInfo'
         type: array
+      user_id:
+        example: wavynoteadmin@gmail.com
+        type: string
     type: object
   restapi.NoteSimpleInfo:
     properties:
@@ -72,9 +75,53 @@ definitions:
     properties:
       from_id:
         description: 노트를 보내는 사용자의 id
+        example: wavynoteadmin@gmail.com
         type: string
       note_id:
         description: 랜덤 매칭을 통해 임의의 대상에게 보낼 노트의 고유 id 값
+        example: 09d05df1-2958-4a3d-b910-3b4fb079327b
+        type: string
+    type: object
+  restapi.RemoveFolderInfo:
+    properties:
+      folder_id:
+        description: 삭제할 폴더의 고유 id 값
+        example: a3106a0c-5ce7-40f6-81f4-ff9b8ebb240b
+        type: string
+      folder_name:
+        description: 삭제할 폴더의 이름
+        example: my diary
+        type: string
+    type: object
+  restapi.RemoveFolderRequest:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/restapi.RemoveFolderInfo'
+        type: array
+      user_id:
+        example: wavynoteadmin@gmail.com
+        type: string
+    type: object
+  restapi.RemoveNoteInfo:
+    properties:
+      folder_id:
+        description: 삭제할 노트가 포함되어 있는 폴더의 고유 id 값
+        example: 980e71ba-0395-49aa-833e-3ebc76b3ec88
+        type: string
+      note_id:
+        description: 삭제할 노트의 고유 id 값
+        example: 09d05df1-2958-4a3d-b910-3b4fb079327b
+        type: string
+    type: object
+  restapi.RemoveNoteRequest:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/restapi.RemoveNoteInfo'
+        type: array
+      user_id:
+        example: wavynoteadmin@gmail.com
         type: string
     type: object
   restapi.Response400:
@@ -130,7 +177,7 @@ definitions:
       keywords:
         description: 내가 쓴 노트의 키워드
         example:
-        - sport
+        - b0d88d67-01fd-47f8-b426-6ca0657d0f6e
         items:
           type: string
         type: array
@@ -177,6 +224,10 @@ definitions:
         example: 09d05df1-2958-4a3d-b910-3b4fb079327b
         type: string
     type: object
+  restapi.SignInRequest:
+    type: object
+  restapi.SignUpRequest:
+    type: object
 info:
   contact:
     email: chelseafandev@gmail.com
@@ -219,6 +270,11 @@ paths:
   /box/conversationlist:
     get:
       description: 노트를 주고 받는 대화방 목록 조회(최대 3개)
+      parameters:
+      - description: user id
+        in: query
+        name: id
+        type: string
       responses:
         "200":
           description: OK
@@ -316,6 +372,13 @@ paths:
   /main/folder:
     delete:
       description: 특정 폴더 삭제
+      parameters:
+      - description: 삭제할 폴다 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.RemoveFolderRequest'
       responses:
         "200":
           description: OK
@@ -380,6 +443,11 @@ paths:
   /main/folderlist:
     get:
       description: 존재하는 모든 폴더 목록 조회
+      parameters:
+      - description: user id
+        in: query
+        name: id
+        type: string
       responses:
         "200":
           description: OK
@@ -409,6 +477,13 @@ paths:
   /main/note:
     delete:
       description: 내가 쓴 특정 노트 삭제
+      parameters:
+      - description: 삭제할 노트 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.RemoveNoteRequest'
       responses:
         "200":
           description: OK
@@ -439,6 +514,10 @@ paths:
     get:
       description: 특정 폴더에 존재하는 모든 노트 조회
       parameters:
+      - description: user id
+        in: query
+        name: uid
+        type: string
       - description: folder id
         in: query
         name: fid
@@ -469,6 +548,112 @@ paths:
       summary: 특정 폴더에 존재하는 모든 노트 조회
       tags:
       - Main 페이지
+  /profile/duplicate:
+    get:
+      description: 회원 가입 시 ID 중복 체크
+      parameters:
+      - description: user id
+        in: query
+        name: id
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 회원 가입 시 ID 중복 체크
+      tags:
+      - Profile 페이지
+  /profile/signin:
+    post:
+      description: 로그인 요청
+      parameters:
+      - description: 로그인 요청
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.SignInRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 로그인 요청
+      tags:
+      - Profile 페이지
+  /profile/signup:
+    post:
+      description: 회원 가입 요청
+      parameters:
+      - description: 회원 가입 요청
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.SignUpRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 회원 가입 요청
+      tags:
+      - Profile 페이지
   /search/folder:
     get:
       description: 전체 폴더를 대상으로 노트 내용 검색
@@ -511,6 +696,10 @@ paths:
     get:
       description: 전체 폴더를 대상으로 노트 내용 검색
       parameters:
+      - description: user id
+        in: query
+        name: id
+        type: string
       - description: query for search
         in: query
         name: query
@@ -541,42 +730,6 @@ paths:
       summary: 전체 폴더를 대상으로 노트 내용 검색
       tags:
       - Main 페이지
-  /write/note:
-    post:
-      description: 내가 쓴 노트 저장
-      parameters:
-      - description: 저장할 노트 정보
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/restapi.SaveNoteRequest'
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/restapi.DefaultResponse'
-        "400":
-          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
-          schema:
-            $ref: '#/definitions/restapi.Response400'
-        "401":
-          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
-          schema:
-            $ref: '#/definitions/restapi.Response401'
-        "404":
-          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
-          schema:
-            $ref: '#/definitions/restapi.Response404'
-        "500":
-          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
-          schema:
-            $ref: '#/definitions/restapi.Response500'
-      security:
-      - BasicAuth: []
-      summary: 내가 쓴 노트 저장
-      tags:
-      - Write 페이지
   /write/opennote:
     post:
       description: 내가 쓴 노트를 오픈 노트에 공유하기
@@ -647,6 +800,42 @@ paths:
       security:
       - BasicAuth: []
       summary: 내가 쓴 노트를 랜덤 매칭을 통해 (비슷한 관심 주제를 갖는)임의의 대상의 노트로 보내기
+      tags:
+      - Write 페이지
+  /write/save:
+    post:
+      description: 내가 쓴 노트 저장
+      parameters:
+      - description: 저장할 노트 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/restapi.SaveNoteRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/restapi.DefaultResponse'
+        "400":
+          description: 요청에 포함된 파라미터 값이 잘못된 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response400'
+        "401":
+          description: 인증에 실패한 경우이며, 실패 사유가 전달됩니다
+          schema:
+            $ref: '#/definitions/restapi.Response401'
+        "404":
+          description: 요청한 리소스가 서버에 존재하지 않는 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response404'
+        "500":
+          description: 요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다
+          schema:
+            $ref: '#/definitions/restapi.Response500'
+      security:
+      - BasicAuth: []
+      summary: 내가 쓴 노트 저장
       tags:
       - Write 페이지
   /write/send:
